src/tests/routes/crates/snapshots/all__routes__crates__reverse_dependencies__prerelease_versions_not_included_in_reverse_dependencies.snap
---
source: src/tests/routes/crates/reverse_dependencies.rs
expression: response.json()
---
{
  "dependencies": [
    {
      "crate_id": "c1",
      "default_features": false,
      "downloads": 0,
      "features": [],
      "id": 1,
      "kind": "normal",
      "optional": false,
      "req": ">= 0",
      "target": null,
      "version_id": 3
    }
  ],
  "meta": {
    "total": 1
  },
  "versions": [
    {
      "audit_actions": [],
      "bin_names": null,
      "checksum": "                                                                ",
      "crate": "c3",
      "crate_size": 0,
      "created_at": "[datetime]",
      "dl_path": "https://crates.io/api/v1/crates/c3/1.0.0/download",
      "downloads": 0,
      "features": {},
      "has_lib": null,
      "id": 3,
      "lib_links": null,
      "license": null,
      "links": {
        "authors": "https://crates.io/api/v1/crates/c3/1.0.0/authors",
        "dependencies": "https://crates.io/api/v1/crates/c3/1.0.0/dependencies",
        "version_downloads": "https://crates.io/api/v1/crates/c3/1.0.0/downloads"
      },
      "num": "1.0.0",
      "published_by": {
        "avatar": null,
        "id": 1,
        "login": "foo",
        "name": null,
        "url": "https://github.com/foo"
      },
      "readme_path": "https://crates.io/api/v1/crates/c3/1.0.0/readme",
      "rust_version": null,
      "updated_at": "[datetime]",
      "yanked": false
    }
  ]
}
